# ceceo-llvm

./: Cargo.toml
code-samples/: test.ceceo
compiler/: Cargo.toml
compiler/src/: main.rs
interpreter/: Cargo.toml
interpreter/src/: binary_op.rs  binary_op_impl.rs  eval_binary_op.rs  eval_iter.rs  eval_proc.rs  eval_result.rs  expr_interpreter.rs  generic_procs.rs  get_atom_vals.rs  main.rs  numeric_bops.rs  numeric_procs.rs  procs_impl.rs  string_procs.rs  user_proc.rs
interpreter/src/tests/: binary_op_tests.rs  mod.rs  proc_tests.rs
parser/: Cargo.toml
parser/src/: ast.rs  ceceo.lalrpop  lexer.rs  lib.rs
src/: ast.rs  ceceo.lalrpop  lexer.rs  main.rs
visualizer/: Cargo.toml
visualizer/src/: ast_serialize.rs  main.rs
