[package]
name = "ceceo_llvm_parser"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"]}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
regex = "1.7.0"